Buggs en los endpoints de pedidos